--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "esbuild": "^0.25.2",
+    "pkg-types": "^2.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.7.2",
     "unplugin-auto-import": "^19.1.2",
     "unplugin-vue-components": "^28.4.1",
-    "vite": "^6.2.0",
+    "vite": "^6.2.5",
     "vue-tsc": "^2.2.4"
   }
 }
