--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.4",
     "element-plus": "^2.9.7",
+    "marked": "^15.0.11",
     "moment": "^2.30.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
