--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.9.10",
     "marked": "^15.0.11",
     "moment": "^2.30.1",
+    "monaco-editor": "^0.52.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
