--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.4",
+    "echarts": "^5.6.0",
     "element-plus": "^2.9.10",
     "marked": "^15.0.11",
     "moment": "^2.30.1",
